# nf-ai-agent-chatbot

./: .env.example  AZURE_DEPLOYMENT.md  Dockerfile  README.md  README_STREAMLIT.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: azure-deploy.yml
.streamlit/: config.toml
data/chroma_db/0fe849dc-efec-498c-8b94-d5142639a7ab/: index_metadata.pickle
data/chroma_db/e154aebb-f614-40d7-9ddd-74205321693b/: index_metadata.pickle
data/faiss_index/: pdf_docs.pkl
data/raw/csv/: Planning Application Details 1.csv  Planning Application Details 2.csv  Planning Application Details.csv
src/: build_vector_db.py
src/agent/: agent.py  csv_agent.py  pandas_ai.py
src/prompts/: __init__.py  agent_prompts.py  csv_agent_prompts.py  document_prompts.py
src/utils/: document_processor.py  logger.py  logo.py  search_tool.py  test_credentials.py  vector_store.py
